--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,14 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
-add_executable(icon-changer)
+add_compile_options(-Wno-character-conversion)
 
-file(GLOB SOURCES "src/*.cpp")
-target_sources(icon-changer PRIVATE ${SOURCES})
+file(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+add_library(icon_changer_lib STATIC ${SOURCES})
+target_include_directories(icon_changer_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+add_executable(icon-changer "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")
+target_link_libraries(icon-changer PRIVATE icon_changer_lib)
 
 if(MSVC OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     add_definitions(-D_WIN32 -D_WINDOWS)
@@ -21,7 +25,8 @@ endif()
 target_link_libraries(icon-changer PRIVATE gdiplus)
 
 if(BUILD_TESTS)
-	add_subdirectory(tests)
+    enable_testing()
+    add_subdirectory(tests)
 else()
-	message(STATUS "Tests are disabled. To enable them, pass -DBUILD_TESTS=ON")
+    message(STATUS "Tests are disabled. To enable them, pass -DBUILD_TESTS=ON")
 endif()
